--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -19101,16 +19101,41 @@ weight</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox67">
+                                              <widget class="GtkHBox" id="hbox_this_test_buttons">
                                                 <property name="visible">True</property>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_video_play_this_test">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="has_tooltip">True</property>
+                                                    <property name="tooltip" translatable="yes">Play Video (v)</property>
+                                                    <signal name="clicked" handler="on_video_play_this_test_clicked"/>
+                                                    <accelerator key="v" signal="clicked"/>
+                                                    <child>
+                                                      <widget class="GtkImage" id="image22">
+                                                        <property name="visible">True</property>
+                                                        <property name="stock">gtk-media-play</property>
+                                                        <property name="icon-size">1</property>
+                                                      </widget>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="pack_type">end</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                                 <child>
                                                   <widget class="GtkButton" id="button_delete_this_test">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="receives_default">True</property>
                                                     <property name="has_tooltip">True</property>
-                                                    <property name="tooltip" translatable="yes">Delete this test</property>
+                                                    <property name="tooltip" translatable="yes">Delete this test (d)</property>
                                                     <signal name="clicked" handler="on_delete_this_test_clicked"/>
+                                                    <accelerator key="d" signal="clicked"/>
                                                     <child>
                                                       <widget class="GtkImage" id="image19">
                                                         <property name="visible">True</property>
