--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13807,7 +13807,7 @@ by you</property>
                       <widget class="GtkViewport" id="viewport_mode">
                         <property name="visible">True</property>
                         <property name="resize_mode">queue</property>
-                        <property name="hadjustment">0 0 738 73.799999999999997 664.20000000000005 738</property>
+                        <property name="hadjustment">0 0 769 76.900000000000006 692.10000000000002 769</property>
                         <property name="shadow_type">out</property>
                         <child>
                           <widget class="GtkHButtonBox" id="hbuttonbox2">
@@ -14127,6 +14127,7 @@ Chronopic</property>
                               <widget class="GtkNotebook" id="notebook_execute">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="show_tabs">False</property>
                                 <property name="show_border">False</property>
                                 <child>
                                   <widget class="GtkFrame" id="frame2">
@@ -15982,6 +15983,7 @@ Chronopic</property>
                                             <child>
                                               <widget class="GtkNotebook" id="notebook_options">
                                                 <property name="visible">True</property>
+                                                <property name="show_tabs">False</property>
                                                 <property name="show_border">False</property>
                                                 <child>
                                                   <widget class="GtkVBox" id="vbox11">
