--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13902,7 +13902,7 @@ by you</property>
                           <widget class="GtkViewport" id="viewport_mode">
                             <property name="visible">True</property>
                             <property name="resize_mode">queue</property>
-                            <property name="hadjustment">0 0 730 73 657 730</property>
+                            <property name="hadjustment">0 0 738 73.799999999999997 664.20000000000005 738</property>
                             <property name="shadow_type">out</property>
                             <child>
                               <widget class="GtkHButtonBox" id="hbuttonbox2">
@@ -17750,7 +17750,6 @@ Second Chronopic to platforms.</property>
                                                 <child>
                                                   <widget class="GtkNotebook" id="notebook_results_data">
                                                     <property name="visible">True</property>
-                                                    <property name="show_tabs">False</property>
                                                     <property name="show_border">False</property>
                                                     <child>
                                                       <widget class="GtkTable" id="table3">
@@ -18263,7 +18262,7 @@ Second Chronopic to platforms.</property>
                                                             <widget class="GtkLabel" id="label267">
                                                             <property name="visible">True</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Now</property>
+                                                            <property name="label" translatable="yes">Last jump</property>
                                                             <property name="justify">center</property>
                                                             </widget>
                                                             <packing>
@@ -18806,7 +18805,7 @@ Second Chronopic to platforms.</property>
                                                             <widget class="GtkLabel" id="label305">
                                                             <property name="visible">True</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Now</property>
+                                                            <property name="label" translatable="yes">Last run</property>
                                                             <property name="justify">center</property>
                                                             </widget>
                                                             <packing>
@@ -19160,7 +19159,7 @@ Second Chronopic to platforms.</property>
                                                             <widget class="GtkLabel" id="label313">
                                                             <property name="visible">True</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Now</property>
+                                                            <property name="label" translatable="yes">Last pulse</property>
                                                             <property name="justify">center</property>
                                                             </widget>
                                                             <packing>
