--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -17750,6 +17750,7 @@ Second Chronopic to platforms.</property>
                                                 <child>
                                                   <widget class="GtkNotebook" id="notebook_results_data">
                                                     <property name="visible">True</property>
+                                                    <property name="show_tabs">False</property>
                                                     <property name="show_border">False</property>
                                                     <child>
                                                       <widget class="GtkTable" id="table3">
